Made chagne to Counter.razor in Test branch

--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counte 2222r</h1>
+<h1>Change made from TestBranch</h1>
 
 <p role="status">Current count: @currentCount</p>
 
