--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,4 +1,10 @@
 ﻿@page "/"
+@using System.Text.Json;
+@using System.IO;
+@using ShipSelector.Models;
+@using static System.Net.WebRequestMethods
+@inject HttpClient Http
+
 
 <PageTitle>Index</PageTitle>
 
@@ -7,3 +13,17 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+@code{
+
+        private Country[]? countries;
+        private UnitType[]? unitTypes;
+    protected override async Task OnInitializedAsync()
+    {
+
+        //var aaa = await Http.GetStringAsync("Data/countries.json");
+        countries = await Http.GetFromJsonAsync<Country[]>("Data/countries.json");
+        unitTypes = await Http.GetFromJsonAsync<UnitType[]>("Data/unitTypes.json");
+        Console.WriteLine(unitTypes.Length);
+    }
+}
