--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
 {
     <div class="top-row ps-3 navbar navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="">Naval Games</a>
+            <a class="navbar-brand" href="">Ship Selector</a>
             <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
