--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -12,8 +12,10 @@
                 @if (routeData.PageType != typeof(ShipSelector.Pages.PrintPage))
                 {
                     <div class="top-row px-4">
-                        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+                        <a href="/about" target="_blank">About</a>
+                        <HomeButton />
                     </div>
+
                 }
                 <article class="content px-4">
                     @Body
