--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
 {
     <div class="top-row ps-3 navbar navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="">Ship Selector</a>
+            <a class="navbar-brand" href="">Ship Selector Ver  @Settings.version</a>
             <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,12 +33,12 @@
                 </div>
             }
 
-            <div class="nav-item px-3">
+@*            <div class="nav-item px-3">
                 <NavLink class="nav-link" href="unitsDB">
                     <span class="oi oi-plus" aria-hidden="true"></span> Unit DB
                 </NavLink>
             </div>
-
+*@
         </nav>
     </div>
 }
