Fix to about link

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -12,7 +12,7 @@
                 @if (routeData.PageType != typeof(ShipSelector.Pages.PrintPage))
                 {
                     <div class="top-row px-4">
-                        <a href="/about" target="_blank">About</a>
+                        <a href="about" target="_blank">About</a>
                         <HomeButton />
                     </div>
 
