Ver 1.1 Added italians, and sorting response for units

--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -1,4 +1,4 @@
-﻿@page "/about"
+﻿@page "/readme"
 <h1 class="display-1">What's this all about?</h1>
 <small class="text-muted">This site is used to generate ship displays for playing different naval miniature games. 
     It will also count up the number of points used with the units selected.
@@ -37,7 +37,10 @@
 <h4>Ver 1.0</h4>
 <small class="text-muted">This is what I consider not quite a minimal viable product. It contains all the surface warship details for the UK, and some for Australia. 
     Next update will contain the Italians.
+</small>
 
+<h4>Ver 1.1</h4>
+<small class="text-muted">Added Italians 
 </small>
 
 @code {
