--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -43,6 +43,10 @@
 <small class="text-muted">Added Italians 
 </small>
 
+<h4>Ver 1.2</h4>
+<small class="text-muted">Removed country from filter if it has no units for selected game system
+</small>
+
 @code {
 
 }
