--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -46,7 +46,9 @@
 <h4>Ver 1.2</h4>
 <small class="text-muted">Removed country from filter if it has no units for selected game system
 </small>
-
+<h4>Ver 1.3</h4>
+<small class="text-muted">Added Netherlands ships for Nimitz
+</small>
 @code {
 
 }
