--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -46,9 +46,15 @@
 <h4>Ver 1.2</h4>
 <small class="text-muted">Removed country from filter if it has no units for selected game system
 </small>
+
 <h4>Ver 1.3</h4>
 <small class="text-muted">Added Netherlands ships for Nimitz
 </small>
+
+<h4>Ver 1.4</h4>
+<small class="text-muted">Added Japanese ships for Nimitz
+</small>
+
 @code {
 
 }
