Ver 1.5. Uss Ships for Nimitz

--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -55,6 +55,9 @@
 <small class="text-muted">Added Japanese ships for Nimitz
 </small>
 
+<h4>Ver 1.5</h4>
+<small class="text-muted">Added USS ships for Nimitz
+</small>
 @code {
 
 }
