--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -58,6 +58,11 @@
 <h4>Ver 1.5</h4>
 <small class="text-muted">Added USS ships for Nimitz
 </small>
+
+<h4>Ver 1.6</h4>
+<small class="text-muted">Added WW1 English and German Starter boxes for Broadsides.
+</small>
+
 @code {
 
 }
