--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -63,6 +63,10 @@
 <small class="text-muted">Added WW1 English and German Starter boxes for Broadsides.
 </small>
 
+<h4>Ver 1.7</h4>
+<small class="text-muted">Broadsides prints in portrait pages.
+</small>
+
 @code {
 
 }
