ver 1.8. Resized images for different rules systems

--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -67,6 +67,10 @@
 <small class="text-muted">Broadsides prints in portrait pages.
 </small>
 
+<h4>Ver 1.8</h4>
+<small class="text-muted">Image sizes of units resized for width and height.
+</small>
+
 @code {
 
 }
