--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -71,6 +71,9 @@
 <small class="text-muted">Image sizes of units resized for width and height.
 </small>
 
+<h4>Ver 1.81</h4>
+<small class="text-muted">Fix to min width and height.
+</small>
 @code {
 
 }
