--- a/Pages/UnitSelection.razor
+++ b/Pages/UnitSelection.razor
@@ -335,7 +335,8 @@
 
         
         //imageStyle = "border:5px solid #000000; max-width:" + ruleSet.ImagePreviewWidth + ";max-height:" + ruleSet.ImagePreviewHeight;
-        imageStyle = "border:5px solid #000000; width:75%; height:75%";
+        //imageStyle = "border:5px solid #000000; width:75%; height:75%";
+        imageStyle = "border:5px solid #000000; width:75%; height:75%; min-width:200px";
         
         Console.WriteLine(imageStyle);
 
