--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -74,6 +74,12 @@
 <h4>Ver 1.81</h4>
 <small class="text-muted">Fix to min width and height.
 </small>
+
+<h4>Ver 1.82</h4>
+<small class="text-muted">Vert aligned selection screen to top.
+    Added 4 more British ships.
+
+</small>
 @code {
 
 }
