Working on BroadsideSD page. Upgraded to .net 8 to use NavigationLock on page. VS updated to latest version to support .net8

--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -78,7 +78,11 @@
 <h4>Ver 1.82</h4>
 <small class="text-muted">Vert aligned selection screen to top.
     Added 4 more British ships.
+</small>
 
+<h4>Ver 1.9</h4>
+<small class="text-muted">Start work on adding ability to be able to play game from browser and apply damage
+    cards and orders electronically instead of printing stuff out.
 </small>
 @code {
 
