--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -33,6 +33,11 @@
                 </div>
             }
 
+             <div class="nav-item px-3">
+                <NavLink href="broadsideSD"> Broadside SD test
+               
+                </NavLink>
+            </div>
 @*            <div class="nav-item px-3">
                 <NavLink class="nav-link" href="unitsDB">
                     <span class="oi oi-plus" aria-hidden="true"></span> Unit DB
