--- a/Pages/BroadsideSD.razor
+++ b/Pages/BroadsideSD.razor
@@ -27,7 +27,7 @@
             <div class="ship_container">
                 <div class="SDS">
                     <img class="ship_image" src="ShipImages/3/5/Pillau.jpg"/>
-                    <input s/>
+                    <input/>
                 </div>
             </div>
         </div>
