--- a/Pages/BroadsideSD.razor.css
+++ b/Pages/BroadsideSD.razor.css
@@ -11,15 +11,17 @@
     background-color:green;
     }
 
-.left_container {
+.ship_list_nav_bar_left_container {
     min-width: 150px;
     background-color: purple;
-    margin:5px;
-    
-    }
+    margin: 5px;
+}
 
-.right_container {
-    
+.ship_sds_status_right_container {
+    display: flex;
+    height: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .ship_container {
@@ -30,16 +32,24 @@
         "SDS SDS curr_damage";
 }
 
-.main_container .right_container .ship_container .SDS {
+.main_container .ship_sds_status_right_container .SDS {
     color: pink;
-    width:400px;
-    background-color:orange;
+    min-width:400px;
+    background-color: orange;
 }
+
+.main_container .ship_sds_status_right_container .ship_current_stats {
+    display:flex;
+    flex-direction:column;
+    min-width: 150px;
+    background-color: black;
+}
+
 
 .ship_button {
     display: block;
     min-width: 150px;
-    margin:5px;
+    margin: 5px;
 }
 
 .main {
