--- a/Pages/BroadsideSD.razor.css
+++ b/Pages/BroadsideSD.razor.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     margin: 0px;
     flex: 100%;
-    background-color:green;
+/*    background-color:green;*/
     }
 
 .ship_list_nav_bar_left_container {
@@ -20,30 +20,23 @@
 .ship_sds_status_right_container {
     display: flex;
     height: 100%;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
 }
 
-.ship_container {
+/*.ship_container {
     position: absolute;
     display: grid;
     grid-template-areas:
         "SDS SDS curr_speed"
         "SDS SDS curr_damage";
-}
+}*/
 
-.main_container .ship_sds_status_right_container .SDS {
+/*.main_container .ship_sds_status_right_container .SDS {
     color: pink;
     min-width:400px;
     background-color: orange;
-}
-
-.main_container .ship_sds_status_right_container .ship_current_stats {
-    display:flex;
-    flex-direction:column;
-    min-width: 150px;
-    background-color: black;
-}
+}*/
 
 
 .ship_button {
@@ -54,10 +47,68 @@
 
 .main {
     width:100%;
-    background-color:blue;
+/*    background-color:blue;*/
     margin:0px;
 }
 
 .ship_image {
 
+}
+
+.ship_current_stats_and_order {
+    display: flex;
+    flex-direction: column;
+    min-width: 150px;
+    max-width:200px;
+    /*    background-color: black;*/
+}
+
+.ship_stats {
+
+}
+.ship_order {
+    margin-top: 5px;
+    border-style: solid;
+}
+
+.damage_cards{
+    margin-top:5px;
+    border:solid;
+}
+
+.damage_card {
+    width:80px;
+    height:135px;
+}
+
+.SDS_and_Stats {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: pink;
+}
+
+.stat_input{
+    max-width:50px;
+    float:right;
+    height:20px;
+}
+
+@media only screen and (max-width: 1130px) {
+    .main {
+        background-color: lightblue;
+    }
+
+    .ship_current_stats_and_order {
+        flex-direction: row;
+    }
+
+    .ship_order {
+        margin-top: 0px;
+    }
+
+    .ship_stats {
+        min-width:180px;
+        margin-right:30px;
+    }
 }
