--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -34,7 +34,7 @@
             }
 
              <div class="nav-item px-3">
-                <NavLink href="broadsideSD"> Broadside SD test
+                <NavLink href="broadsideSD_Mockup"> Broadside SD Mockup
                
                 </NavLink>
             </div>
